--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,7 +6,7 @@
 <title>
     <%= title %>
 </title>
-<meta name="description" content="Best Link Management Platform built for Enterprise Level. Free Custom URL Shortener. Get personalised branded &amp; vanity links with custom short domain with API. Alternative. T2M will never delete your data.">
+<meta name="description" content="Simple shortener in Cekak.">
 <style type="text/css">
     #form_input_error a {
         color: #fff !important;
