--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -30,7 +30,7 @@
                         <div id="form_input_error" class="help-block">
                         </div>
                         <div id="form_output">
-                            <span style="position: absolute; left: -9999px; visibility: hidden;" id="default_domain">http://cekak.herokuapp.com/</span>
+                            <span style="position: absolute; left: -9999px; visibility: hidden;" id="default_domain">https://cekak.herokuapp.com/</span>
                             <input id="shorturl" type="text" value="" style="width: 212px; max-width: 75%">
                             <button type="button" class="btn btn-sm btn-default" data-clipboard-target="#shorturl">copy</button>
                         </div>
